// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shape Classes Circle renders correctly 1`] = `
"<svg version="1.1" width="300" height="200" xmlns="http://www.w3.org/2000/svg">
      <circle cx="150" cy="100" r="80" fill="blue" />
      <text x="150" y="125" font-size="60" text-anchor="middle" fill="black">123</text>
    </svg>"
`;

exports[`Shape Classes Square renders correctly 1`] = `
"<svg version="1.1" width="300" height="200" xmlns="http://www.w3.org/2000/svg">
      <rect width="200" height="200" fill="green"/>
      <text x="100" y="125" font-size="70" text-anchor="middle" fill="yellow">XYZ</text>
    </svg>"
`;

exports[`Shape Classes Triangle renders correctly 1`] = `
"<svg version="1.1" width="300" height="200" xmlns="http://www.w3.org/2000/svg">
      <polygon points="150, 18 244, 182 56, 182" fill="red" />
      <text x="150" y="145" font-size="50" text-anchor="middle" fill="white">ABC</text>
    </svg>"
`;
